--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -16,8 +16,8 @@
     "import os\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
-    "import util",
-    "import CTD",
+    "import util\n",
+    "import CTD\n",
     "import data_generator"
    ]
   },
