Update and rename simulation-2.ipynb to simulation.ipynb

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -16,9 +16,9 @@
     "import os\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
-    "%run ../CTD/util.ipynb\n",
-    "%run ../CTD/CTD.ipynb\n",
-    "%run ../CTD/data_generator.ipynb"
+    "import util\n",
+    "import CTD\n",
+    "import data_generator"
    ]
   },
   {
