--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -97,7 +97,7 @@
    "id": "90bdeeb6",
    "metadata": {},
    "source": [
-    "Above gives a dataset with larger observational noise, no missing entries, higher dimensional balance among columns of $X^*$, and large cluster distances relative to size of the temporal embedding."
+    "Above gives a dataset with larger observational noise, no missing entries, higher dimensional balance among columns of $X^*$, and large cluster distances relative the to size of the temporal embedding."
    ]
   },
   {
